[gd_scene load_steps=20 format=3 uid="uid://dvotfuopf4vgn"]

[ext_resource type="PackedScene" uid="uid://cwm6oyr7ft0u3" path="res://Scenes/WorldScenes/world_ui.tscn" id="2_bqjby"]
[ext_resource type="FontFile" uid="uid://jiobqv87vkb1" path="res://Assets/Fonts/super-mario-land-gb-doublecase.ttf" id="3_3hg1y"]
[ext_resource type="AudioStream" uid="uid://h4dpa4cjh0vu" path="res://Assets/SFX/coin.wav" id="4_7ec6r"]
[ext_resource type="PackedScene" uid="uid://cblht0y4cj107" path="res://Scenes/WorldScenes/Lava.tscn" id="5_65wo7"]
[ext_resource type="Texture2D" uid="uid://d2oco0l776qnu" path="res://Assets/Tilesets/Pyramid_Map.png" id="5_v7c3p"]
[ext_resource type="AudioStream" uid="uid://do7hea0hiu10s" path="res://Assets/Audio/New/SMLE_MAP_PYRAMID.wav" id="7_df4c4"]
[ext_resource type="Script" path="res://Scripts/World_Scripts/Pyramid_player.gd" id="7_m2et2"]
[ext_resource type="PackedScene" uid="uid://8pdteineh4g" path="res://Scenes/WorldScenes/overworld_player.tscn" id="7_v5b7a"]
[ext_resource type="PackedScene" uid="uid://byuk8v5tg0fkf" path="res://Scenes/WorldScenes/interactive_level_tile.tscn" id="8_c1pds"]
[ext_resource type="Script" path="res://Scripts/World_Scripts/LevelTiles/PyramidTile.gd" id="10_1xg63"]

[sub_resource type="LabelSettings" id="LabelSettings_t1o5g"]
font = ExtResource("3_3hg1y")
font_size = 7

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5inef"]
texture = ExtResource("5_v7c3p")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
3:7/0 = 0
7:3/0 = 0
7:2/0 = 0
8:0/0 = 0
8:1/0 = 0
8:2/0 = 0
8:3/0 = 0
9:3/0 = 0
9:2/0 = 0
9:1/0 = 0
9:0/0 = 0
10:0/0 = 0
10:1/0 = 0
11:1/0 = 0
11:0/0 = 0
10:2/0 = 0
7:5/0 = 0
8:5/0 = 0
8:4/0 = 0
7:4/0 = 0
1:4/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
5:9/0 = 0
4:9/0 = 0
6:9/0 = 0
6:10/0 = 0
6:11/0 = 0
6:12/0 = 0
7:12/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
9:12/0 = 0
9:10/0 = 0
9:9/0 = 0
8:9/0 = 0
7:9/0 = 0
7:10/0 = 0
8:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
5:12/0 = 0
5:13/0 = 0
5:14/0 = 0
5:15/0 = 0
5:16/0 = 0
6:16/0 = 0
6:15/0 = 0
6:14/0 = 0
6:13/0 = 0
4:13/0 = 0
3:13/0 = 0
2:13/0 = 0
1:13/0 = 0
0:13/0 = 0
0:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
4:14/0 = 0
3:14/0 = 0
2:14/0 = 0
1:14/0 = 0
1:16/0 = 0
2:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
4:16/0 = 0
3:16/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
4:8/0 = 0
5:7/0 = 0
4:7/0 = 0
5:6/0 = 0
6:6/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
5:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
10:8/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
10:6/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
9:4/0 = 0
9:5/0 = 0
12:0/0 = 0
12:1/0 = 0
13:1/0 = 0
13:0/0 = 0
10:3/0 = 0
8:13/0 = 0
9:13/0 = 0
3:8/0 = 0
1:8/0 = 0
1:7/0 = 0
0:8/0 = 0
0:7/0 = 0

[sub_resource type="TileSet" id="TileSet_l1035"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_5inef")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_07y8h"]
texture = ExtResource("5_v7c3p")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
11:9/0 = 0
12:9/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
11:10/0 = 0
12:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
11:11/0 = 0
12:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
9:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
8:13/0 = 0
9:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0

[sub_resource type="TileSet" id="TileSet_lan6c"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_07y8h")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mgfbx"]
texture = ExtResource("5_v7c3p")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
11:9/0 = 0
12:9/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
11:10/0 = 0
12:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
11:11/0 = 0
12:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
9:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
8:13/0 = 0
9:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0

[sub_resource type="TileSet" id="TileSet_e8hsv"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_mgfbx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2l2hd"]
texture = ExtResource("5_v7c3p")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
0:8/0 = 0
1:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
2:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
9:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
8:13/0 = 0
9:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
11:3/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
13:3/0 = 0
11:9/0 = 0
11:10/0 = 0
11:11/0 = 0
12:11/0 = 0
12:10/0 = 0
12:9/0 = 0
12:5/0 = 0
13:5/0 = 0
10:4/0 = 0
10:5/0 = 0
11:5/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSet" id="TileSet_78jh8"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_2l2hd")

[node name="PyramidMap" type="Node"]

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 160
limit_bottom = 144

[node name="WorldUI" parent="Camera2D" instance=ExtResource("2_bqjby")]

[node name="LevelStart" type="CanvasLayer" parent="Camera2D"]
layer = 2
visible = false

[node name="LevelStartBlack" type="ColorRect" parent="Camera2D/LevelStart"]
visibility_layer = 2
z_index = 5
offset_left = -6.0
offset_top = -5.0
offset_right = 166.0
offset_bottom = 151.0
color = Color(0, 0, 0, 1)

[node name="LevelStartText" type="Label" parent="Camera2D/LevelStart"]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -4.0
offset_right = 48.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "MARIO START!"
label_settings = SubResource("LabelSettings_t1o5g")

[node name="Coin" type="AudioStreamPlayer" parent="Camera2D"]
stream = ExtResource("4_7ec6r")
pitch_scale = 1.5

[node name="TileMap" type="Node" parent="."]

[node name="TileMapTop" type="TileMap" parent="TileMap"]
z_index = 7
tile_set = SubResource("TileSet_l1035")
format = 2
layer_0/tile_data = PackedInt32Array(1048577, 524288, 13, 1048578, 589824, 13, 983042, 524288, 13, 983043, 589824, 13, 1048579, 524288, 13, 1048580, 589824, 13, 983040, 524288, 13, 983041, 589824, 13, 917505, 524288, 13, 917506, 589824, 13, 851968, 524288, 13, 851969, 589824, 13, 196612, 589824, 12, 262147, 589824, 12, 327682, 589824, 12, 196611, 524288, 11, 262146, 524288, 11, 196610, 524288, 13, 262145, 524288, 13, 196609, 589824, 13, 327681, 524288, 11, 393217, 589824, 10, 458753, 589824, 11, 524289, 589824, 10, 589825, 589824, 11, 655361, 589824, 10, 720897, 589824, 11, 1048584, 524288, 9, 1048585, 458752, 9, 1048586, 458752, 9, 1048583, 458752, 9, 851971, 458752, 9, 983044, 524288, 13, 1048582, 524288, 13, 983045, 524288, 10, 917507, 524288, 13, 851970, 524288, 10, 786433, 524288, 13, 917508, 524288, 10, 1048581, 589824, 13, 1048587, 458752, 9, 1048588, 458752, 10, 983053, 458752, 9, 983054, 589824, 9, 983055, 393216, 9, 983056, 458752, 10, 917521, 458752, 9, 851986, 393216, 10, 786450, 393216, 11, 720914, 393216, 11, 786434, 589824, 9, 851972, 589824, 9, 917509, 589824, 9, 983046, 589824, 9, 983052, 393216, 9, 917520, 393216, 9, 917522, 458752, 10, 1048590, 524288, 10, 1048591, 458752, 10, 1048592, 524288, 13, 1048593, 589824, 13, 983057, 524288, 13, 983058, 589824, 13, 1048594, 524288, 13, 1048589, 524288, 13, 1114124, 524288, 13, 1114125, 524288, 13, 1114126, 524288, 13, 1114127, 524288, 13, 1114128, 524288, 13, 1114129, 524288, 13, 1114130, 524288, 13, 655378, 393216, 10, 589841, 393216, 12, 589842, 458752, 11, 524305, 393216, 10, 458769, 393216, 11, 393233, 196608, 2, 327697, 393216, 11, 262161, 393216, 10, 196624, 393216, 12, 196625, 458752, 11, 196626, 524288, 13, 327698, 524288, 13, 458770, 524288, 13, 524306, 589824, 13, 393234, 589824, 13, 262162, 589824, 13)

[node name="TileMapPaths" type="TileMap" parent="TileMap"]
z_index = 5
tile_set = SubResource("TileSet_lan6c")
format = 2
layer_0/tile_data = PackedInt32Array(589830, 0, 14, 589832, 196608, 14, 524295, 196608, 11, 655367, 196608, 14, 720903, 196608, 14, 983048, 196608, 14, 917512, 196608, 14, 851976, 196608, 14, 786440, 262144, 13, 786439, 131072, 15, 589835, 262144, 13, 655372, 262144, 13, 655371, 131072, 15, 720908, 131072, 15, 393231, 131072, 13, 393232, 196608, 14, 458767, 196608, 14, 524303, 131072, 10, 589839, 131072, 10, 655375, 196608, 14, 720911, 262144, 15, 720910, 196608, 14, 720909, 196608, 14, 589834, 196608, 14, 589833, 196608, 14, 524296, 327680, 9, 655368, 327680, 10, 655366, 262144, 10, 524294, 262144, 9, 589831, 196608, 14)

[node name="TileMapOBJs" type="TileMap" parent="TileMap"]
z_index = 3
tile_set = SubResource("TileSet_e8hsv")
format = 2
layer_0/tile_data = PackedInt32Array(458762, 458752, 4, 524298, 458752, 5, 458763, 524288, 4, 524299, 524288, 5, 458764, 589824, 4, 524300, 589824, 5, 393226, 393216, 2, 655373, 393216, 2, 720905, 393216, 2, 786442, 458752, 2, 786438, 458752, 2, 589829, 458752, 2, 851981, 327680, 2, 917517, 327680, 3, 524291, 327680, 2, 589827, 327680, 3, 327695, 393216, 2)

[node name="TileMapMiddle" type="TileMap" parent="TileMap"]
z_index = 2
tile_set = SubResource("TileSet_l1035")
format = 2
layer_0/tile_data = PackedInt32Array(983047, 65536, 2, 917511, 65536, 1, 917513, 262144, 2, 983049, 262144, 1, 851978, 262144, 7, 917514, 262144, 8, 786443, 327680, 6, 851979, 327680, 7, 917515, 327680, 8, 786444, 393216, 6, 851980, 393216, 7, 786445, 458752, 6, 851981, 458752, 7, 786446, 524288, 6, 851982, 524288, 7, 786447, 589824, 6, 851983, 589824, 7, 786448, 786432, 7, 851984, 786432, 8, 786449, 196608, 7, 851985, 196608, 8, 655377, 0, 8, 589841, 0, 7, 655378, 0, 1, 720914, 0, 1, 786450, 0, 1, 524305, 0, 1, 458769, 0, 1, 327697, 0, 1, 262161, 0, 1, 589840, 131072, 6, 524304, 131072, 4, 589838, 65536, 6, 458766, 65536, 3, 524302, 65536, 4, 393230, 65536, 2, 327694, 65536, 0, 327695, 131072, 0, 327696, 196608, 0, 393231, 131072, 2, 458768, 196608, 1, 393232, 131072, 2, 458767, 131072, 2, 589839, 196608, 6, 524303, 196608, 4, 851974, 720896, 7, 917510, 720896, 8, 655365, 720896, 7, 720901, 720896, 8, 786438, 65536, 1, 720902, 65536, 2, 589829, 65536, 1, 524293, 65536, 0, 524294, 131072, 0, 524295, 196608, 0, 524296, 131072, 0, 458761, 65536, 1, 393225, 65536, 0, 393226, 131072, 0, 393227, 262144, 0, 458764, 131072, 0, 458765, 196608, 0, 458763, 131072, 1, 458762, 131072, 2, 524298, 131072, 1, 524299, 131072, 2, 524300, 131072, 1, 524297, 131072, 2, 524301, 196608, 1, 589837, 327680, 0, 655376, 393216, 0, 851975, 393216, 0, 720906, 327680, 0, 720912, 327680, 0, 720913, 131072, 2, 720911, 131072, 1, 720909, 131072, 1, 720907, 131072, 1, 655372, 131072, 1, 655374, 131072, 1, 589835, 131072, 1, 655370, 131072, 1, 589833, 131072, 1, 655368, 131072, 1, 589831, 131072, 1, 655366, 131072, 1, 720903, 131072, 1, 720905, 131072, 1, 786440, 131072, 1, 851977, 131072, 1, 917512, 131072, 1, 983048, 131072, 2, 851976, 131072, 2, 786439, 131072, 2, 786441, 131072, 2, 786442, 131072, 2, 720904, 131072, 2, 655367, 131072, 2, 589830, 131072, 2, 589832, 131072, 2, 655369, 131072, 2, 589834, 131072, 2, 655371, 131072, 2, 589836, 131072, 2, 720908, 131072, 2, 655373, 131072, 2, 720910, 131072, 2, 655375, 131072, 2, 458758, 524288, 3, 458754, 458752, 3)

[node name="TileMapbottom" type="TileMap" parent="TileMap"]
z_index = 1
tile_set = SubResource("TileSet_78jh8")
format = 2
layer_0/tile_data = PackedInt32Array(655377, 0, 0, 589838, 0, 0, 393218, 786432, 10, 458754, 0, 1, 327682, 786432, 9, 393219, 720896, 4, 458755, 720896, 2, 393220, 131072, 6, 393221, 786432, 4, 327683, 720896, 3, 327685, 524288, 2, 262149, 0, 2, 196613, 720896, 0, 262147, 786432, 5, 262148, 524288, 1, 196612, 720896, 0, 458758, 0, 1, 262150, 655360, 4, 327686, 589824, 1, 393222, 589824, 2, 131078, 589824, 0, 196614, 589824, 0, 196617, 655360, 0, 262153, 655360, 1, 327689, 655360, 2, 393225, 655360, 3, 262151, 786432, 0, 327687, 786432, 1, 262152, 851968, 0, 327688, 851968, 1, 196615, 524288, 0, 196616, 524288, 0, 393223, 524288, 1, 458760, 524288, 2, 458759, 0, 2, 393224, 0, 2, 327690, 0, 2, 262154, 524288, 2, 196618, 720896, 0, 196619, 589824, 0, 262155, 589824, 1, 327691, 589824, 2, 393227, 589824, 3, 262156, 786432, 0, 327692, 786432, 1, 262157, 851968, 0, 327693, 851968, 1, 196620, 524288, 0, 196621, 524288, 0, 196622, 524288, 0, 196623, 524288, 0, 196624, 458752, 1, 262159, 524288, 1, 327695, 589824, 2, 262160, 589824, 0, 327696, 589824, 1, 393232, 589824, 2, 393229, 524288, 2, 1048584, 0, 2, 393233, 0, 2, 327684, 0, 2, 262158, 0, 2, 327694, 0, 2, 458756, 786432, 2, 458757, 720896, 2, 393228, 0, 2, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 589825, 0, 1, 655361, 0, 1, 720897, 0, 1, 851986, 0, 1, 720901, 0, 1, 917514, 0, 1, 917510, 0, 1, 851979, 0, 1, 851980, 0, 1, 851981, 0, 1, 851982, 0, 1, 851983, 0, 1, 917517, 0, 1, 851984, 0, 1, 589827, 0, 1)

[node name="Lava" parent="TileMap" instance=ExtResource("5_65wo7")]
position = Vector2(4, 4)

[node name="OverworldPlayer" parent="." instance=ExtResource("7_v5b7a")]
unique_name_in_owner = true
z_index = 6
z_as_relative = false
position = Vector2(68, 132)
rotation = 0.004744
collision_mask = 128
motion_mode = 1
safe_margin = 0.001
script = ExtResource("7_m2et2")

[node name="WorldMapMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_df4c4")
autoplay = true

[node name="Level Holder" type="Node" parent="."]

[node name="_1_3 level" parent="Level Holder" instance=ExtResource("8_c1pds")]
z_index = 5
position = Vector2(60, 76)
script = ExtResource("10_1xg63")
level_scene_path = "res://Scenes/Levels/1_3.tscn"
spawn_point = Vector2(24, 116)
level_name = "1-3"
area_name = "BIRABUTO"

[node name="ComeInRight" parent="Level Holder" instance=ExtResource("8_c1pds")]
z_index = 5
position = Vector2(140, 52)
script = ExtResource("10_1xg63")
level_name = "2-1"
area_name = "BIRABUTO"

[node name="ComeInDown" parent="Level Holder" instance=ExtResource("8_c1pds")]
z_index = 5
position = Vector2(68, 132)
script = ExtResource("10_1xg63")
level_name = "1-2"
area_name = "BIRABUTO"

[connection signal="area_entered" from="Level Holder/_1_3 level" to="OverworldPlayer" method="_on__1_3_level_area_entered"]
[connection signal="area_entered" from="Level Holder/ComeInRight" to="OverworldPlayer" method="_on_come_in_right_area_entered"]
[connection signal="area_entered" from="Level Holder/ComeInDown" to="OverworldPlayer" method="_on_come_in_down_area_entered"]
